add HoS name and replace margin with padding for the header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div class="container mt-4" id="home">
+    <div class="container pt-4" id="home">
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between">
                 <div class="col-12 text-center">
@@ -59,7 +59,7 @@
                                 informasi bagi institusi maupun publik yang ingin mengetahui tentang sekolah ini. Dengan
                                 adanya kemajuan teknologi informasi yang berkembang pesat, SMP PGRI bergagas untuk
                                 memulai pembuatan website ini agar masyarakat umum lebih mudah dalam mengenal SMP PGRI
-                                Arjasari Bandung. <b>(Nama Kepala Sekolah)</b></p>
+                                Arjasari Bandung. <b>(Dede Suherman, S.Pd, Kepala Sekolah)</b></p>
                         </div>
                     </div>
                 </div>
