--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="row">
                         <div class="col-3">
-                            <img src="./public/img/kepala-sekolah.png">
+                            <img class="img-thumbnail bg-transparent" src="./public/img/kepala-sekolah.png">
                         </div>
                         <div class="col-9">
                             <h1 class="jumbotron-heading">(Contoh) Sambutan Kepala Sekolah</h1>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="row mb-2">
-                            <div class="col-md-6">
+                            <div class="col-xl-6 col-lg-12">
                                 <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                     <div class="card-body d-flex flex-column align-items-start">
                                         <h5 class="mb-0">
@@ -93,7 +93,7 @@
                                         src="./public/img/berita1.jpeg" width="200" height="250">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-xl-6 col-lg-12">
                                 <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                     <div class="card-body d-flex flex-column align-items-start">
                                         <h5 class="mb-0">
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="card mb-4 box-shadow">
                                     <img class="card-img-top" src="./public/img/media1.png" width="100" height="225">
                                     <div class="card-body">
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="card mb-4 box-shadow">
                                     <img class="card-img-top" src="./public/img/media2.png" width="100" height="225">
                                     <div class="card-body">
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="card mb-4 box-shadow">
                                     <img class="card-img-top" src="./public/img/media3.png" width="100" height="225">
                                     <div class="card-body">
