update navbar to have a little bit better responsiveness

--- a/index.html
+++ b/index.html
@@ -30,16 +30,34 @@
             </div>
         </header>
 
-        <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-center">
-                <a class="p-2 px-4 text-muted" href="#home">Home</a>
-                <a class="p-2 px-4 text-muted" href="#berita">Berita</a>
-                <a class="p-2 px-4 text-muted" href="#media">Media</a>
-                <a class="p-2 px-4 text-muted" href="./profil.html">Profil</a>
-                <a class="p-2 px-4 text-muted" href="./profil.html#akademik">Akademik</a>
-                <a class="p-2 px-4 text-muted" href="./kesiswaan.html">Kesiswaan</a>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="#berita">Berita</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="#media">Media</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="./profil.html">Profil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="./profil.html#akademik">Akademik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="p-2 px-4 nav-link text-center" href="./kesiswaan.html">Kesiswaan</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
         <main role="main">
             <section class="jumbotron text-left py-4">
