--- a/kesiswaan.html
+++ b/kesiswaan.html
@@ -20,7 +20,7 @@
 
 <body>
 
-   <div class="container pt-4" id="home">
+   <div class="container pt-4" id="kesiswaan">
       <header class="blog-header py-3">
          <div class="row flex-nowrap justify-content-between">
             <div class="col-12 text-center">
@@ -30,86 +30,103 @@
          </div>
       </header>
 
-      <div class="nav-scroller py-1 mb-2">
-         <nav class="nav d-flex justify-content-center">
-            <a class="p-2 px-4 text-muted" href="./index.html">Home</a>
-            <a class="p-2 px-4 text-muted" href="./index.html#berita">Berita</a>
-            <a class="p-2 px-4 text-muted" href="./index.html#media">Media</a>
-            <a class="p-2 px-4 text-muted" href="./profil.html">Profil</a>
-            <a class="p-2 px-4 text-muted" href="./profil.html#akademik">Akademik</a>
-            <a class="p-2 px-4 text-muted" href="#">Kesiswaan</a>
-         </nav>
-      </div>
-   </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html">Home</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html#berita">Berita</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html#media">Media</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./profil.html">Profil</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./profil.html#akademik">Akademik</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="#">Kesiswaan</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
 
-   <main role="main" class="container">
-      <div class="row">
-         <div class="col-md-12 mt-3 blog-main">
-            <div class="blog-post">
-               <h2 class="blog-post-title mb-3">Kesiswaan</h2>
+      <main role="main" class="container">
+         <div class="row">
+            <div class="col-md-12 mt-3 blog-main">
+               <div class="blog-post">
+                  <h2 class="blog-post-title mb-3">Kesiswaan</h2>
 
-               <hr>
+                  <hr>
 
-               <h2>OSIS</h2>
+                  <h2>OSIS</h2>
 
-               <p><i>To be added</i></p>
+                  <p><i>To be added</i></p>
 
-               <h2 class="mt-5 pt-3">Ekstrakurikuler</h2>
+                  <h2 class="mt-5 pt-3">Ekstrakurikuler</h2>
 
-               <p><i>To be added</i></p>
+                  <p><i>To be added</i></p>
+               </div>
             </div>
          </div>
-      </div>
-   </main>
+      </main>
 
 
-   <section class="section-no-border pb-3 mt-4 bg-secondary text-white">
-      <!-- Footer -->
-      <footer class="page-footer font-small mdb-color lighten-3 pt-2">
-         <div class="container text-center text-md-left">
-            <div class="row">
-               <div class="col-md-8 mr-auto my-md-4 my-0 mt-4 mb-1">
+      <section class="section-no-border pb-3 mt-4 bg-secondary text-white">
+         <!-- Footer -->
+         <footer class="page-footer font-small mdb-color lighten-3 pt-2">
+            <div class="container text-center text-md-left">
+               <div class="row">
+                  <div class="col-md-8 mr-auto my-md-4 my-0 mt-4 mb-1">
 
-                  <h5 class="font-weight-bold text-uppercase mb-4">Sekilas Tentang SMP PGRI Arjasari</h5>
-                  <p>SMP PGRI ARJASARI adalah salah satu satuan pendidikan dengan jenjang SMP di ARJASARI, Kec.
-                     Arjasari, Kab. Bandung, Jawa Barat. Dalam menjalankan kegiatannya, SMP PGRI ARJASARI berada
-                     di bawah naungan Kementerian Pendidikan dan Kebudayaan.</p>
-                  <p>Pembelajaran di SMP PGRI ARJASARI dilakukan pada pagi hari. Dalam seminggu, pembelajaran
-                     dilakukan selama 6 hari.</p>
+                     <h5 class="font-weight-bold text-uppercase mb-4">Sekilas Tentang SMP PGRI Arjasari</h5>
+                     <p>SMP PGRI ARJASARI adalah salah satu satuan pendidikan dengan jenjang SMP di ARJASARI, Kec.
+                        Arjasari, Kab. Bandung, Jawa Barat. Dalam menjalankan kegiatannya, SMP PGRI ARJASARI berada
+                        di bawah naungan Kementerian Pendidikan dan Kebudayaan.</p>
+                     <p>Pembelajaran di SMP PGRI ARJASARI dilakukan pada pagi hari. Dalam seminggu, pembelajaran
+                        dilakukan selama 6 hari.</p>
 
-               </div>
+                  </div>
 
-               <div class="col-4 mx-auto my-md-4 my-0 mt-4 mb-1">
-                  <h5 class="font-weight-bold text-uppercase mb-4">Alamat</h5>
-                  <p>Banjaran Pinggir Sari No.51, Arjasari, Kec. Arjasari, Kabupaten Bandung, Jawa Barat 40379</p>
-                  <p>Email: <a class="text-info" href="pgrismparjasari@gmail.com">pgrismparjasari@gmail.com</a>
-                  </p>
-               </div>
-
-               <div class="col-12 text-center border-top">
-                  <div class="mt-3">
-                     <p>Copyright - 2022 SMP PGRI Arjasari Bandung, Powered by <a class="text-info"
-                           href="https://getbootstrap.com/">Bootstrap</a>
-                        <!-- developed by Tim FIF Telkom University (led by Johan), inspired from a template provided by mdo (https://twitter.com/mdo) -->
-                     <p>
-                        <a class="text-info" href="#home">Kembali ke atas</a>
+                  <div class="col-4 mx-auto my-md-4 my-0 mt-4 mb-1">
+                     <h5 class="font-weight-bold text-uppercase mb-4">Alamat</h5>
+                     <p>Banjaran Pinggir Sari No.51, Arjasari, Kec. Arjasari, Kabupaten Bandung, Jawa Barat 40379</p>
+                     <p>Email: <a class="text-info" href="pgrismparjasari@gmail.com">pgrismparjasari@gmail.com</a>
                      </p>
+                  </div>
+
+                  <div class="col-12 text-center border-top">
+                     <div class="mt-3">
+                        <p>Copyright - 2022 SMP PGRI Arjasari Bandung, Powered by <a class="text-info"
+                              href="https://getbootstrap.com/">Bootstrap</a>
+                           <!-- developed by Tim FIF Telkom University (led by Johan), inspired from a template provided by mdo (https://twitter.com/mdo) -->
+                        <p>
+                           <a class="text-info" href="#home">Kembali ke atas</a>
+                        </p>
+                     </div>
                   </div>
                </div>
             </div>
-         </div>
 
-      </footer>
-   </section>
+         </footer>
+      </section>
 
-   <!-- Bootstrap core JavaScript -->
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-   <script src="./public/js/popper.min.js"></script>
-   <script src="./public/js/bootstrap.min.js"></script>
-   <script src="./public/js/holder.min.js"></script>
+      <!-- Bootstrap core JavaScript -->
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+         crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+      <script src="./public/js/popper.min.js"></script>
+      <script src="./public/js/bootstrap.min.js"></script>
+      <script src="./public/js/holder.min.js"></script>
 </body>
 
 </html>
