--- a/profil.html
+++ b/profil.html
@@ -20,7 +20,7 @@
 
 <body>
 
-   <div class="container pt-4" id="home">
+   <div class="container pt-4" id="profil">
       <header class="blog-header py-3">
          <div class="row flex-nowrap justify-content-between">
             <div class="col-12 text-center">
@@ -30,16 +30,34 @@
          </div>
       </header>
 
-      <div class="nav-scroller py-1 mb-2">
-         <nav class="nav d-flex justify-content-center">
-            <a class="p-2 px-4 text-muted" href="./index.html">Home</a>
-            <a class="p-2 px-4 text-muted" href="./index.html#berita">Berita</a>
-            <a class="p-2 px-4 text-muted" href="./index.html#media">Media</a>
-            <a class="p-2 px-4 text-muted" href="#">Profil</a>
-            <a class="p-2 px-4 text-muted" href="#akademik">Akademik</a>
-            <a class="p-2 px-4 text-muted" href="./kesiswaan.html">Kesiswaan</a>
-         </nav>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html">Home</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html#berita">Berita</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./index.html#media">Media</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="#">Profil</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="#akademik">Akademik</a>
+               </li>
+               <li class="nav-item">
+                  <a class="p-2 px-4 nav-link text-center" href="./kesiswaan.html">Kesiswaan</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
    </div>
 
    <main role="main" class="container">
