fix scroll to top bug

--- a/kesiswaan.html
+++ b/kesiswaan.html
@@ -109,7 +109,7 @@
                               href="https://getbootstrap.com/">Bootstrap</a>
                            <!-- developed by Tim FIF Telkom University (led by Johan), inspired from a template provided by mdo (https://twitter.com/mdo) -->
                         <p>
-                           <a class="text-info" href="#home">Kembali ke atas</a>
+                           <a class="text-info" href="#kesiswaan">Kembali ke atas</a>
                         </p>
                      </div>
                   </div>
