--- a/profil.html
+++ b/profil.html
@@ -215,7 +215,7 @@
                            href="https://getbootstrap.com/">Bootstrap</a>
                         <!-- developed by Tim FIF Telkom University (led by Johan), inspired from a template provided by mdo (https://twitter.com/mdo) -->
                      <p>
-                        <a class="text-info" href="#home">Kembali ke atas</a>
+                        <a class="text-info" href="#profil">Kembali ke atas</a>
                      </p>
                   </div>
                </div>
