update HoS name

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 informasi bagi institusi maupun publik yang ingin mengetahui tentang sekolah ini. Dengan
                                 adanya kemajuan teknologi informasi yang berkembang pesat, SMP PGRI bergagas untuk
                                 memulai pembuatan website ini agar masyarakat umum lebih mudah dalam mengenal SMP PGRI
-                                Arjasari Bandung. <b>(Dede Suherman, S.Pd, Kepala Sekolah)</b></p>
+                                Arjasari Bandung. <b>(Suryana, S.Pd, Kepala Sekolah)</b></p>
                         </div>
                     </div>
                 </div>
