--- a/profil.html
+++ b/profil.html
@@ -204,7 +204,7 @@
 
                <div class="col-4 mx-auto my-md-4 my-0 mt-4 mb-1">
                   <h5 class="font-weight-bold text-uppercase mb-4">Alamat</h5>
-                  <p>Banjaran Pinggir Sari No.51, Arjasari, Kec. Arjasari, Kabupaten Bandung, Jawa Barat 40379</p>
+                  <p>Jalan Raya Arjasari No. 05, Kec. Arjasari, Kabupaten Bandung, Jawa Barat 40379</p>
                   <p>Email: <a class="text-info" href="pgrismparjasari@gmail.com">pgrismparjasari@gmail.com</a>
                   </p>
                </div>
