remove 'contoh' word in the page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <img class="img-thumbnail bg-transparent" src="./public/img/kepala-sekolah.png">
                         </div>
                         <div class="col-9">
-                            <h1 class="jumbotron-heading">(Contoh) Sambutan Kepala Sekolah</h1>
+                            <h1 class="jumbotron-heading">Sambutan Kepala Sekolah</h1>
                             <p class="lead text-muted">Website SMP PGRI Arjasari Bandung hadir untuk menjadi sumber
                                 informasi bagi institusi maupun publik yang ingin mengetahui tentang sekolah ini. Dengan
                                 adanya kemajuan teknologi informasi yang berkembang pesat, SMP PGRI bergagas untuk
