--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="p-2 px-4 nav-link text-center" href="./profil.html#akademik">Akademik</a>
                     </li>
                     <li class="nav-item">
-                        <a class="p-2 px-4 nav-link text-center" href="./kesiswaan.html">Kesiswaan</a>
+                        <a class="p-2 px-4 nav-link text-center" href="./alumni.html">Alumni</a>
                     </li>
                 </ul>
             </div>
